Take a null mapping error map in FreshnessStats as no refused updates
The compact constructor substitutes an empty map, so a caller that has
no refusals to report can pass null without the record throwing.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>